put all text into a <p> instead of <h1>, added a new h1 and h2

--- a/WeepApplication/Views/Home/Index.cshtml
+++ b/WeepApplication/Views/Home/Index.cshtml
@@ -3,11 +3,13 @@
 }
 
 <div class="text-center">
-    <h1>
+    <h1>Index Page</h1>
+    <p>
         Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent ac luctus felis. Sed scelerisque tincidunt odio, facilisis dapibus risus bibendum quis. Fusce malesuada leo tellus, vitae vestibulum dolor congue at. Vivamus non sem varius leo posuere placerat. Fusce fermentum mauris justo, ac porttitor sapien tempus eget. Phasellus at dapibus massa. Donec tortor nulla, varius vel dui ut, ornare sollicitudin enim.
         In et felis ac ex faucibus tincidunt sit amet eu neque. Maecenas ultricies eleifend sapien ac molestie. Sed congue lectus massa, maximus ultricies nibh interdum non. Phasellus dolor sem, sodales non sapien vitae, molestie rutrum leo. Curabitur tincidunt nulla sed lacus volutpat consequat. Nunc leo purus, laoreet id neque nec, condimentum tristique ligula. Cras lobortis diam at neque sagittis sodales. Maecenas accumsan bibendum sapien, at luctus dolor pulvinar eget. Maecenas venenatis blandit orci vitae cursus. Nulla nec interdum ex, vitae mollis enim. Aenean lacinia justo ut ipsum fermentum, ac commodo ex efficitur.
         Sed sit amet ultrices dolor. Mauris tellus neque, lobortis non risus nec, pulvinar convallis lectus. Ut porta libero at semper maximus. Phasellus ut finibus mi. Duis hendrerit venenatis felis et dictum. Praesent dictum libero et rutrum consectetur. Aenean nulla nunc, laoreet vel posuere eu, dapibus sit amet sem. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Vivamus elementum mauris ipsum, vel sodales sapien pharetra vitae. Cras vel orci nec elit luctus finibus.
         Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Integer dictum iaculis purus at commodo. Ut nec mauris mauris. In sodales tincidunt nisi, ac placerat felis laoreet id. Nunc ut mauris at odio laoreet maximus quis quis magna. Curabitur elementum nec quam eu vehicula. Nunc ac metus et est cursus porttitor. Praesent lacinia vestibulum pellentesque. Vivamus ullamcorper sapien ut nulla bibendum aliquam. Praesent commodo elit ut porta volutpat.
         Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Mauris efficitur arcu turpis, vitae ullamcorper magna sodales eget. Nunc tincidunt nibh vehicula ex bibendum, nec interdum dolor venenatis. Interdum et malesuada fames ac ante ipsum primis in faucibus. Fusce ac sagittis quam. Ut dapibus mauris lorem, eu sagittis turpis aliquam tempor. Fusce sagittis rutrum enim, lacinia porta tellus facilisis vel.
-    </h1>
+    </p>
+    <h2>Bottom Text</h2>
 </div>
